--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type= "text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="main.js"></script>
     <title>Quiz Español</title>
 </head>
+
 <body>
     <div class="welcome">
-        <h1>Hola, Sea Bienvenido!!!</h1>
-        <button onclick="clicar ()">Haga clic aquí para empezar</button>
-        <p id="clic"></p>
+        <h1>HOLA, SEA BIENVENIDO!!!</h1>
+        <ul>
+            <a href="#" class="btn" onclick="clicar ()">CLIC AQUÍ PARA EMPEZAR</a>
+            <p id="clic"></p>
+        </ul>
     </div>
-
     <div class="resultado">
-        <h2>Respuestas</h2>
-        <p class= "correctos"> Correctos</p>
-        <p class= "true"></p>
-        <p class="verdade"></p>
-        <p class= "si"></p>
-        <p class="errores">Errores</p>
-        <p class= "false"></p>
-        <p class="falso"></p>
-        <p class= "no"></p>
-
-        </p>
+        <h1 class="nombre"></h1>
+        <h2>RESULTADO</h2>
+        <div id="result" class="result">
+            <p class="correctos"> CORRECTOS</p>
+            <p class="true"></p>
+            <p class="verdade"></p>
+            <p class="si"></p>
+            <p class="errores">ERRORES</p>
+            <p class="false"></p>
+            <p class="falso"></p>
+            <p class="no"></p>
+            </p>
+        </div>
     </div>
 </body>
