--- a/index.html
+++ b/index.html
@@ -10,28 +10,41 @@
 </head>
 
 <body>
-    <div class="welcome">
-        <h1 class="bien">HOLA, SEA BIENVENIDO!!!</h1>
-        <ul>
-            <a href="#" class="btn" onclick="clicar ()">CLIC AQUÍ PARA EMPEZAR</a>
-            <p id="clic"></p>
-        </ul>
-    </div>
-    <div class="resultado">
-        <h1 class="nombre"></h1>
-        <h2>RESULTADO</h2>
-        <div id="result" class="result">
-            <div id="correct">
-                <h4 class="correctos"> CORRECTOS</h4>
-                <p class="true"></p>
-                <p class="verdade"></p>
-                <p class="si"></p>
+    <div class="container">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="row">
+                <div class="welcome">
+                    <div class="bienvenido">
+                        <h1 class="bien">HOLA, SEA BIENVENIDO!!!</h1>
+                        <ul>
+                            <a href="#" class="btn" onclick="clicar ()">CLIC AQUÍ PARA EMPEZAR</a>
+                            <p id="clic"></p>
+                        </ul>
+                    </div>
+
+                </div>
             </div>
-            <div id="error">
-                <h4 class="errores">ERRORES</h4>
-                <p class="false"></p>
-                <p class="falso"></p>
-                <p class="no"></p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="row">
+                <div class="resultado">
+                    <h1 class="nombre"></h1>
+                    <h2>RESULTADO</h2>
+                    <div id="result" class="result">
+                        <div id="correct">
+                            <h4 class="correctos"> CORRECTOS</h4>
+                            <p class="true"></p>
+                            <p class="verdade"></p>
+                            <p class="si"></p>
+                        </div>
+                        <div id="error">
+                            <h4 class="errores">ERRORES</h4>
+                            <p class="false"></p>
+                            <p class="falso"></p>
+                            <p class="no"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
